--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1685,7 +1685,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff6ae0;
+  background: #c63b90;
 }
 .links-of-blogroll {
   font-size: 13px;
