--- a/themes/next/source/css/_schemes/Pisces/_layout.styl
+++ b/themes/next/source/css/_schemes/Pisces/_layout.styl
@@ -1,7 +1,8 @@
 .header {
   position: relative;
   margin: 0 auto;
-  width: $main-desktop;
+  /* width: $main-desktop; */
+  width: 80%;
 
   +tablet() {
     width: auto;
@@ -47,7 +48,8 @@
 }
 
 .container .main-inner {
-  width: $main-desktop;
+  /*width: $main-desktop;*/
+  width: 80%;
 
   +tablet() {
     width: auto;
@@ -61,7 +63,8 @@
   float: right;
   box-sizing: border-box;
   padding: $content-desktop-padding;
-  width: $content-desktop;
+  /*width: $content-desktop;*/
+  width: calc(100% - 260px); 
   background: white;
   min-height: 700px;
   box-shadow: $box-shadow-inner;
@@ -127,4 +130,3 @@
     padding-right: 260px;
   }
 }
-
